# NeuraDoc

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
include/: AlertEngine.hpp  AuditLogger.hpp  DataRouter.hpp  DeviceAPI.hpp  DeviceInterface.hpp  NetworkServer.hpp  PatientDatabase.hpp  PostgreSQLDatabase.hpp  RealTimeAnalyzer.hpp  SecureNetworkServer.hpp  SecureRouter.hpp  SecurityManager.hpp  VitalSigns.hpp  WebAPI.hpp
src/: main.cpp  production_main.cpp  secure_main.cpp
src/alert/: AlertEngine.cpp
src/analysis/: RealTimeAnalyzer.cpp
src/api/: DeviceAPI.cpp  WebAPI.cpp
src/clients/: desktop_client.cpp  monitor_client.cpp
src/database/: PostgreSQLDatabase.cpp
src/device/: DeviceInterface.cpp  VitalSigns.cpp
src/network/: NetworkServer.cpp
src/router/: DataRouter.cpp
src/security/: AuditLogger.cpp  SecureNetworkServer.cpp  SecureRouter.cpp  SecurityManager.cpp
src/storage/: PatientDatabase.cpp
tests/: CMakeLists.txt  test_alerts.cpp  test_vitals.cpp
